Made a fix to the disabled button z-index

--- a/less/horizontal-audio.less
+++ b/less/horizontal-audio.less
@@ -42,6 +42,7 @@
     border-color: transparent !important;
     color: #ccc !important;
     cursor: default;
+    z-index: 550;
 }
 
 .audioplayicon[disabled="disabled"]:hover, .audiopauseicon[disabled="disabled"]:hover, .audiostopicon[disabled="disabled"]:hover {
@@ -49,6 +50,7 @@
     border-color: transparent !important;
     color: #ccc !important;
     cursor: default;
+    z-index: 550;
 }
 
 .audioplayicon:focus, .audiopauseicon:focus, .audiostopicon:focus {outline:0;}
